[gd_scene load_steps=16 format=3 uid="uid://bxrfm2bgydqcv"]

[ext_resource type="Script" uid="uid://ge4ltgynuqsi" path="res://UI/disclaimer.gd" id="1_ix3xv"]
[ext_resource type="Texture2D" uid="uid://dxjmht72gtdpn" path="res://UI/assets/disclaimer_bg.png" id="1_u2nuy"]
[ext_resource type="Texture2D" uid="uid://bh08bj38cadmk" path="res://UI/assets/credits_panel.png" id="2_s7s41"]
[ext_resource type="Texture2D" uid="uid://c4n0nc5skapjw" path="res://UI/assets/Button.png" id="3_q4tu6"]
[ext_resource type="FontFile" uid="uid://b2lhiurb5m3t1" path="res://UI/fonts/Montserrat-ExtraBold.ttf" id="3_rrma0"]
[ext_resource type="Texture2D" uid="uid://bt1ijjcxikv6m" path="res://UI/assets/Button_hover.png" id="4_ix3xv"]
[ext_resource type="FontFile" uid="uid://b7vtyy4qnrm0v" path="res://UI/fonts/Montserrat-Regular.ttf" id="4_mdqkj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_itv7h"]
texture = ExtResource("2_s7s41")

[sub_resource type="LabelSettings" id="LabelSettings_q4tu6"]
font = ExtResource("3_rrma0")
font_size = 30
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ix3xv"]
font = ExtResource("4_mdqkj")
font_size = 25
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.27058825)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ahxgf"]
texture = ExtResource("3_q4tu6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x4wum"]
texture = ExtResource("4_ix3xv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qk1lu"]
texture = ExtResource("4_ix3xv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pfsbg"]
texture = ExtResource("3_q4tu6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uh2ao"]
texture = ExtResource("3_q4tu6")

[node name="disclaimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ix3xv")

[node name="DisclaimerBg" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_u2nuy")

[node name="DisclaimerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -479.0
offset_top = -323.0
offset_right = 480.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_itv7h")

[node name="DisclaimerLabel" type="Label" parent="DisclaimerPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 7.5
offset_right = 100.0
offset_bottom = 45.5
grow_horizontal = 2
text = "DISCLAIMER"
label_settings = SubResource("LabelSettings_q4tu6")

[node name="Label" type="Label" parent="DisclaimerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -51.0
offset_right = 400.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
text = "This title features mature themes, nudity, and sexual content. 
Players must be 18+ to access or download this game.
All characters are fictional adults and no minors are depicted."
label_settings = SubResource("LabelSettings_ix3xv")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -479.0
offset_top = 197.0
offset_right = -270.99994
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.47649, 1.47649)
theme_override_colors/font_color = Color(0.9098039, 0.87058824, 1, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.9098039, 0.87058824, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_mdqkj")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_ahxgf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x4wum")
theme_override_styles/hover = SubResource("StyleBoxTexture_qk1lu")
theme_override_styles/disabled = SubResource("StyleBoxTexture_pfsbg")
theme_override_styles/focus = SubResource("StyleBoxTexture_uh2ao")
text = "EXIT"

[node name="Proceed" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 174.99988
offset_top = 199.0
offset_right = 382.99988
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.47649, 1.47649)
theme_override_colors/font_color = Color(0.9098039, 0.87058824, 1, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.9098039, 0.87058824, 1, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_mdqkj")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_ahxgf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_x4wum")
theme_override_styles/hover = SubResource("StyleBoxTexture_qk1lu")
theme_override_styles/disabled = SubResource("StyleBoxTexture_pfsbg")
theme_override_styles/focus = SubResource("StyleBoxTexture_uh2ao")
text = "PROCEED"

[node name="TransitionRect" type="ColorRect" parent="."]
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
